--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A blog made with Node and MongoDB",
   "main": "server.js",
   "scripts": {
-    "start" : "node server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +25,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "lodash": "^4.17.4",
     "mongoose": "^4.12.4",
     "path": "^0.12.7"
   }
