--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "mongoose": "^4.12.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "storj-lib": "^8.3.1"
   }
 }
