--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "homepage": "https://github.com/ArthurBOliveira/node-blog#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cloudinary": "^1.9.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.12.4",
-    "path": "^0.12.7",
-    "storj-lib": "^8.3.1"
+    "path": "^0.12.7"
   }
 }
